# score-addon-hyperion

./: CMakeLists.txt  LICENSE  README.md  addon.json  score_addon_hyperion.cpp  score_addon_hyperion.hpp
Hyperion/: HyperionConnection.cpp  HyperionConnection.hpp  OutputFactory.cpp  OutputFactory.hpp  OutputNode.cpp  OutputNode.hpp  OutputSettings.hpp
